# aiida-core

./: .codecov.yml  .coderabbit.yaml  .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .project  .prospector.yaml  .pydevproject  .pylintrc  .readthedocs.yml  .style.yapf  .travis.yml  .wci.yml  1.sql  40k-int-nodes.aiida  AGENTS-backup-extended.md  AGENTS.md  AI_POLICY.md  AUTHORS.txt  CHANGELOG.md  CHANGELOG.txt  CODE_OF_CONDUCT.md  COMMAND_OUTPUTS.md  CONTRIBUTING.md  DEVELOPMENT_NOTES.md  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  README.rst  backup-code.py  benchmark_realistic_workload.py  benchmark_results  clean.sh  codecov.yml  conftest.py  data_dump_script.sh  debug-module4.md  (+30 more)
.ci/: Dockerfile  Jenkinsfile  README  add.sh  before_install.sh  before_script.sh  check-jenkinsfile.sh  code-add-setup-input.txt  computer-direct-configure-input.txt  computer-torquessh-setup-input.txt  docker-aiida-core.yml  docker-rabbitmq.yml  install_conda.sh  prep_ssh.sh  setup.sh  setup_profiles.sh  test_daemon.py  test_fixtures.py  test_ipython_magics.py  test_plugin_testcase.py  test_profile.py  test_profile_manager.py  test_quicksetup.py  test_rpn.sh  test_script.sh  test_setup.py  test_test_manager.py  test_verdi_load_time.sh  transifex_upload.sh  workchains.py
.ci/polish/: cli.py  expression.py  workchain.py
.ci/pytest/: conftest.py  test_pytest_fixtures.py  test_unittest_example.py
.ci/torquessh-doubler/: Dockerfile  README.md
.circleci/: config.yml
.devcontainer/: Dockerfile  configure-aiida.sh  devcontainer.json  docker-compose.yml  post_create.sh
.docker/: README.md  build.json  docker-aiida-core.yml  docker-bake.hcl  docker-compose.aiida-core-base.yml  docker-compose.aiida-core-dev.yml  docker-compose.aiida-core-with-services.yml  docker-compose.base-with-services.yml  docker-compose.base.yml  docker-compose.yml  docker-rabbitmq.yml  dodo.py  pytest.ini  requirements.in  requirements.txt
.docker/aiida-core-base/: Dockerfile  fix-permissions
.docker/aiida-core-dev/: Dockerfile  aiida-clone-and-install.sh
.docker/aiida-core-with-services/: Dockerfile
.docker/base/: Dockerfile  config-quick-setup.yaml  fix-permissions  initial-condarc
.docker/base-with-services/: Dockerfile  _init.sh
.docker/my_init.d/: configure-aiida.sh
.docker/opt/: configure-aiida.sh
.docker/tests/: conftest.py  test_aiida.py
.github/: CODEOWNERS  dependabot.yml  test_legacy_pytest_fixtures.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  doc-improvements.md  feature_request.md
.github/config/: README.md  add-docker.yaml  add-singularity.yaml  add.yaml  doubler.sh  doubler.yaml  localhost-config.yaml  localhost.yaml  profile.yaml  slurm-ssh-config.yaml  slurm-ssh.yaml  slurm_rsa
.github/system_tests/: README.md  test_containerized_code.py  test_daemon.py  test_ipython_magics.py  test_plugin_testcase.py  test_polish_workchains.sh  test_profile_manager.py  test_test_manager.py  test_verdi_load_time.sh  workchains.py
.github/workflows/: benchmark-config.json  benchmark.yml  build_and_test_docker_on_pr.yml  check_release_tag.py  ci-code.yml  ci-style.yml  ci.yml  conda.sh  daemon_tests.sh  (+31 more)
.jenkins/: Dockerfile  Jenkinsfile
.jenkins-data/: Dockerfile  Jenkinsfile  README  add.sh  check-jenkinsfile.sh  computer-setup-input.txt  create_coverage_info.sh  test_rpn.sh
.molecule/: README.md
.travis-data/: before_install.sh  before_script.sh  code-doubler-setup-input.txt  code-setup-input.txt  computer-configure-input.txt  computer-setup-input.txt  set_daemon_times.py  setup_profiles.sh  test_daemon.py  test_devel.py  test_fixtures.py  test_plugin_testcase.py  test_script.sh  test_setup.py  wait-for-it.sh  workchains.py
aida/: execmanager.py  workflowmanager.py
aida1/: settings.py  settings.py~  urls.py  urls.py~  wsgi.py
aidadb/: admin.py  admin.py~  models.py  tests.py
aidalib/: __init__.py  espresso_plugin.py  exceptions.py  structure.py
aidasrv/: .gitignore  __init__.py  settings.py  site_settings_template.py  submitter.py  urls.py
aiida/: __init__.py  __main__.py  client.py  execmanager.py  optional.py  replacer.sh  settings.py  utils.py  workflowmanager.py
backup_script/: check_if_profile_locked.py  make_backup.sh
benchmarks/: __init__.py  dj.py  json_benchmark.py  normalize_type.py  sqla.py  ssh_connection_benchmark.py  test_ssh_connection_reuse.py
coverage/: .gitignore
docs/: .wci.yml  Makefile  README  README.docs  README.rst  apidoc.sh  make.bat  requirements_for_rtd.txt  rtd_settings.py  update_req_for_rtd.py
dump-MultiplyAddWorkChain-47362/: .aiida_node_metadata.yaml
examples/: __init__.py
flex/: models.py
groupexample/: runner.py  someworkchain.py
helper_scripts/: create_element_list.py  export_fixtures.py  fill_element_data.py
new_api_structure/: README
old_api_structure/: README.txt  api.py  oldmodel.py  oldtests.py  potential_md5.py  pw.py  tests.py
other_stuff/: aiidarenamer.sh  thread1.py  thread2.py  use_cases.py  user_interface.py  wflib.py
previous_tests/: qtest.py
requirements/: README.md  requirements-django-py-3.5.txt  requirements-django-py-3.6.txt  requirements-py-3.10.txt  requirements-py-3.11.txt  requirements-py-3.12.txt  requirements-py-3.5.txt  requirements-py-3.6.txt  requirements-py-3.7.txt  requirements-py-3.8.txt  requirements-py-3.9.txt  requirements-sqlalchemy-py-3.7.txt
review/: 2026-06-02-msd-gm-tutorial.md
temp/: experiment.py
test/: util.py
tests/: __init__.py  conftest.py  test.py  test_base_dataclasses.py  test_boom.py  test_calculation_node.py  test_conftest.py  test_dataclasses.py  test_dbimporters.py  test_generic.py  test_markers.py  test_nodes.py  test_public_api.py  test_restapi.py
utils/: .gource.conf  __init__.py  autogenerate_all_imports.py  create_requirements.py  dependency_management.py  environment.yml  fastentrypoints.py  make_all.py  minor-release.sh  patch-release.sh  public_api.py  pylint_aiida.py  requirements.txt  review-commits.sh  update_dependencies.py  validate_consistency.py  validate_pyproject.py  validate_version.py
(+5933 files in other folders)
