[build-system]
build-backend = 'flit_core.buildapi'
requires = ['flit_core >=3.4,<4']

[project]
authors = [{name = 'The AiiDA team', email = 'developers@aiida.net'}]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Framework :: AiiDA',
  'License :: OSI Approved :: MIT License',
  'Operating System :: POSIX :: Linux',
  'Operating System :: MacOS :: MacOS X',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering'
]
dependencies = [
    "alembic~=1.2",
    "archive-path~=0.4.2",
    "aio-pika~=6.6",
    "circus~=0.18.0",
    "click-spinner~=0.1.8",
    "click~=8.1",
    "disk-objectstore~=0.6.0",
    "docstring-parser",
    "get-annotations~=0.1;python_version<'3.10'",
    "graphviz~=0.19",
    "ipython>=7",
    "jinja2~=3.0",
    "jsonschema~=3.0",
    "kiwipy[rmq]~=0.7.7",
    "importlib-metadata~=4.13",
    "numpy~=1.21",
    "paramiko~=2.7,>=2.7.2",
    "plumpy@git+https://github.com/aiidateam/plumpy.git@async-run#egg=plumpy",
    "pgsu~=0.2.1",
    "psutil~=5.6",
    "psycopg2-binary~=2.8",
    "pytz~=2021.1",
    "pyyaml~=6.0",
    "requests~=2.0",
    "sqlalchemy~=1.4.22",
    "tabulate~=0.8.5",
    "tqdm~=4.45",
    "upf_to_json~=0.9.2",
    "wrapt~=1.11"
]

[project.urls]
Home = "http://www.aiida.net/"
Documentation = "https://aiida.readthedocs.io"
Source = "https://github.com/aiidateam/aiida-core"

[project.optional-dependencies]
atomic_tools = [
  'PyCifRW~=4.4',
  'ase~=3.18',
  'matplotlib~=3.3,>=3.3.4',
  'pymatgen>=2022.1.20',
  'pymysql~=0.9.3',
  'seekpath~=1.9,>=1.9.3',
  'spglib>=1.14,<3.0'
]
bpython = [
  'bpython~=0.18.0'
]
docs = [
  'pydata-sphinx-theme~=0.15.1',
  'sphinx~=7.2.0',
  'sphinx-copybutton~=0.5.0',
  'sphinx-design~=0.5.0',
  'sphinx-notfound-page~=1.0',
  'sphinxext-rediraffe~=0.2.4',
  'sphinx-sqlalchemy~=0.2.0',
  'sphinx-intl~=2.1.0',
  'myst-nb~=1.0.0'
]
notebook = [
  'jupyter-client~=8.0',
  'jupyter~=1.0',
  'notebook~=6.1,>=6.1.5'
]
pre-commit = [
  'aiida-core[atomic_tools,rest,tests,tui]',
  'mypy~=1.10.0',
  'packaging~=23.0',
  'pre-commit~=3.5',
  'sqlalchemy[mypy]~=2.0',
  'tomli',
  'types-PyYAML'
]
rest = [
  'flask-cors~=3.0',
  'flask-restful~=0.3.7',
  'flask~=2.2',
  'pyparsing~=3.0',
  'python-memcached~=1.59',
  'seekpath~=1.9,>=1.9.3'
]
ssh_kerberos = [
  'gssapi~=1.6',
  'pyasn1~=0.4.8'
]
tests = [
  'aiida-export-migration-tests==0.9.0',
  'pg8000~=1.13',
  'pgtest~=1.3,>=1.3.1',
  'pytest~=7.0',
  'pytest-asyncio~=0.12,<0.17',
  'pytest-timeout~=2.0',
  'pytest-cov~=4.1',
  'pytest-rerunfailures~=12.0',
  'pytest-benchmark~=4.0',
  'pytest-regressions~=2.2',
  'pympler~=1.0',
  'coverage~=7.0',
  'sphinx~=7.2.0',
  'docutils~=0.20'
]
tui = [
  'trogon'
]

[project.scripts]
runaiida = 'aiida.cmdline.commands.cmd_run:run'
verdi = 'aiida.cmdline.commands.cmd_verdi:verdi'

[project.urls]
Documentation = 'https://aiida.readthedocs.io'
Home = 'http://www.aiida.net/'
Source = 'https://github.com/aiidateam/aiida-core'

[tool.flit.module]
name = 'aiida'

[tool.flit.sdist]
exclude = [
  'docs/',
  'tests/'
]

[tool.mypy]
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_subclassing_any = false
disallow_untyped_calls = false
# these options reduce the strictness and should eventually be removed
disallow_untyped_defs = false
enable_error_code = [
  'ignore-without-code',
  'redundant-expr',
  'truthy-bool'
]
plugins = ['sqlalchemy.ext.mypy.plugin']
scripts_are_modules = true
show_error_codes = true
show_traceback = true
# strictness
strict = true
warn_return_any = false
warn_unreachable = true

[[tool.mypy.overrides]]
implicit_reexport = true
module = 'aiida'

[[tool.mypy.overrides]]
disallow_untyped_decorators = false
module = 'aiida.cmdline.commands.*'

[[tool.mypy.overrides]]
check_untyped_defs = false
module = 'tests.*'

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  'ase.*',
  'bpython.*',
  'bs4.*',
  'CifFile.*',
  'circus.*',
  'click_spinner.*',
  'docutils.*',
  'flask_cors.*',
  'flask_restful.*',
  'get_annotations.*',
  'graphviz.*',
  'importlib._bootstrap.*',
  'IPython.*',
  'kiwipy.*',
  'matplotlib.*',
  'mayavi.*',
  'MySQLdb.*',
  'numpy.*',
  'paramiko.*',
  'pgsu.*',
  'pgtest.*',
  'phonopy.*',
  'psutil.*',
  'psycopg.*',
  'pymatgen.*',
  'pymysql.*',
  'pyparsing.*',
  'pympler.*',
  'pytz.*',
  'requests.*',
  'ruamel.*',
  'scipy.*',
  'seekpath.*',
  'spglib.*',
  'sphinxcontrib.details.*',
  'tabulate.*',
  'tqdm.*',
  'trogon.*',
  'wrapt.*',
  'upf_to_json.*'
]

[[tool.mypy.overrides]]
ignore_errors = true
module = 'plumpy'

[tool.pytest.ini_options]
addopts = '--benchmark-skip --durations=50 --durations-min=1 --strict-config --strict-markers -ra --cov-report xml --cov-append '
filterwarnings = [
  'ignore:.*and will be removed in NumPy 2.0.*:DeprecationWarning:ase:',
  'ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning:pytz|dateutil|tqdm|aio_pika:',
  'ignore:datetime.datetime.utcnow:DeprecationWarning:aio_pika|pytz|pgtest:',
  'ignore::DeprecationWarning:babel:',
  'ignore::DeprecationWarning:frozendict:',
  'ignore::DeprecationWarning:sqlalchemy:',
  'ignore::DeprecationWarning:yaml:',
  'ignore::DeprecationWarning:pymatgen:',
  'ignore::DeprecationWarning:jsonbackend:',
  'ignore::DeprecationWarning:pkg_resources:',
  'ignore:ast.* is deprecated.*:DeprecationWarning:docstring_parser:',
  'ignore::SyntaxWarning:CifFile:',
  'ignore::pytest.PytestCollectionWarning',
  'ignore:Creating AiiDA configuration folder.*:UserWarning',
  'ignore:Object of type .* not in session, .* operation along .* will not proceed:sqlalchemy.exc.SAWarning',
  'ignore:Identity map already had an identity for .* inside of an event handler within the flush?:sqlalchemy.exc.SAWarning',
  'ignore:The `aiida.orm.nodes.data.upf` module is deprecated.*:aiida.common.warnings.AiidaDeprecationWarning',
  'ignore:The `Code` class is deprecated.*:aiida.common.warnings.AiidaDeprecationWarning',
  'default::ResourceWarning'
]
markers = [
  'nightly: long running tests that should rarely be affected and so only run nightly',
  'requires_rmq: requires a connection (on port 5672) to RabbitMQ',
  'requires_psql: requires a connection to PostgreSQL DB',
  'presto: automatic marker meaning "not requires_rmq and not requires_psql"',
  'sphinx: set parameters for the sphinx `app` fixture'
]
minversion = '7.0'
testpaths = [
  'tests'
]
xfail_strict = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
ignore = [
  'F403',  # Star imports unable to detect undefined names
  'F405',  # Import may be undefined or defined from star imports
  'PLR0911',  # Too many return statements
  'PLR0912',  # Too many branches
  'PLR0913',  # Too many arguments in function definition
  'PLR0915',  # Too many statements
  'PLR2004',  # Magic value used in comparison
  'RUF005',  # Consider iterable unpacking instead of concatenation
  'RUF012'  # Mutable class attributes should be annotated with `typing.ClassVar`
]
select = [
  'E',  # pydocstyle
  'W',  # pydocstyle
  'F',  # pyflakes
  'I',  # isort
  'N',  # pep8-naming
  'PLC',  # pylint-convention
  'PLE',  # pylint-error
  'PLR',  # pylint-refactor
  'PLW',  # pylint-warning
  'RUF'  # ruff
]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.18.0
envlist = py39

[testenv]
usedevelop=True
deps =
    py39: -rrequirements/requirements-py-3.9.txt
    py310: -rrequirements/requirements-py-3.10.txt
    py311: -rrequirements/requirements-py-3.11.txt
    py312: -rrequirements/requirements-py-3.12.txt

[testenv:py{39,310,311,312}-presto]
passenv =
    PYTHONASYNCIODEBUG
setenv =
    AIIDA_WARN_v3 =
commands = pytest -m 'presto' {posargs}

[testenv:py{39,310,311,312}]
passenv =
    PYTHONASYNCIODEBUG
setenv =
    AIIDA_WARN_v3 =
commands = pytest {posargs}

[testenv:py{39,310,311,312}-verdi]
passenv =
    AIIDA_TEST_BACKEND
setenv =
    AIIDA_PATH = {toxinidir}/.tox/.aiida
commands = verdi {posargs}

[testenv:py{39,310,311,312}-docs-{clean,update}]
description =
    clean: Build the documentation (remove any existing build)
    update: Build the documentation (modify any existing build)
passenv = RUN_APIDOC
setenv =
    update: RUN_APIDOC = False
changedir = docs
allowlist_externals = make
commands =
    clean: make clean
    make debug

[testenv:py{39,310,311,312}-docs-live]
# tip: remove apidocs before using this feature (`cd docs; make clean`)
description = Build the documentation and launch browser (with live updates)
deps =
    py39: -rrequirements/requirements-py-3.9.txt
    py310: -rrequirements/requirements-py-3.10.txt
    py311: -rrequirements/requirements-py-3.11.txt
    py312: -rrequirements/requirements-py-3.12.txt
    sphinx-autobuild
setenv =
    RUN_APIDOC = False
commands =
    sphinx-autobuild \
        --re-ignore build/.* \
        --port 0 --open-browser \
        -n -b {posargs:html} docs/source/ docs/build/{posargs:html}

[testenv:py{39,310,311,312}-pre-commit]
description = Run the pre-commit checks
extras = pre-commit
commands = pre-commit run {posargs}

[testenv:molecule]
description = Run the molecule containerised tests
skip_install = true
parallel_show_output = true
deps =
    ansible~=2.10.0
    docker~=4.2
    molecule[docker]~=3.1.0
setenv =
    MOLECULE_GLOB = .molecule/*/config_local.yml
passenv =
    AIIDA_TEST_BACKEND
    AIIDA_TEST_WORKERS
commands = molecule {posargs:test}
"""
